add the analytical solution for the Vanderborght 2005 test

--- a/create_SUMMA_testcase_initial_nc.ipynb
+++ b/create_SUMMA_testcase_initial_nc.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -515,21 +515,333 @@
     {
      "data": {
       "text/plain": [
-       "66.60795454545455"
+       "0.0044435667462045005"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "soil_par = pd.DataFrame( data = [[0.045,0.43,0.15,3.0,1000,0.5],[0.08,0.43,0.04,1.6,50,0.5],[0.1,0.4,0.01,1.1,10,0.5]],\n",
+    "                         index = ('sand', 'loam', 'clay'),\n",
+    "                         columns = ('theta_res', 'theta_sat', 'vGn_alpha', 'vGn_n', 'k_soil', 'l'))\n",
+    "\n",
+    "soil_par\n",
+    "\n",
+    "def Se(theta, soil):\n",
+    "    return (theta - soil['theta_res']) / (soil['theta_sat'] - soil['theta_res'])\n",
+    "\n",
+    "def theta(Se, soil):\n",
+    "    return soil['theta_res'] + Se * (soil['theta_sat'] - soil['theta_res'])\n",
+    "\n",
+    "def SeVG(h, soil):\n",
+    "    m = 1 - 1 / soil['vGn_n']\n",
+    "    return (1 + (soil['vGn_alpha'] * abs(h)) ** soil['vGn_n']) ** (-m)\n",
+    "\n",
+    "Se(0.3, soil_par.loc['sand'])\n",
+    "SeVG(-100, soil_par.loc['sand'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:      (depth: 200)\n",
+       "Coordinates:\n",
+       "  * depth        (depth) int64 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 ...\n",
+       "Data variables:\n",
+       "    theta_res    (depth) float64 0.045 0.045 0.045 0.045 0.045 0.045 0.045 ...\n",
+       "    vGn_n        (depth) float64 3.0 3.0 3.0 3.0 3.0 3.0 3.0 3.0 3.0 3.0 3.0 ...\n",
+       "    vGn_alpha    (depth) float64 1.5e-09 1.5e-09 1.5e-09 1.5e-09 1.5e-09 ...\n",
+       "    theta_sat    (depth) float64 0.43 0.43 0.43 0.43 0.43 0.43 0.43 0.43 ...\n",
+       "    k_soil       (depth) float64 0.0001157 0.0001157 0.0001157 0.0001157 ...\n",
+       "    k_macropore  (depth) float64 0.0001157 0.0001157 0.0001157 0.0001157 ...\n",
+       "    theta_mp     float64 0.43"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(hruId=('hru',1001),rootingDepth=('hru',0.0))\n",
+    "xr.Dataset(dict(hruId=('hru',[1001]),rootingDepth=('hru',[0.0])))\n",
+    "par + ['l']\n",
+    "ds.vGn_alpha.values = ds.vGn_alpha * 0.01\n",
+    "ds.vGn_alpha\n",
+    "xr.concat([ds, ds.isel(depth=range(50,100))], dim='depth')\n",
+    "ds.isel(depth=np.concatenate([np.arange(0, 100), np.arange(50, 100),np.arange(50, 100)]))\n",
+    "np.concatenate([np.arange(0, 100), np.arange(50, 100),np.arange(50, 100)])\n",
+    "ds\n",
+    "#ds['theta_mp'] = ds.theta_sat.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'theta_mp' (hru: 1)>\n",
+       "array([ 0.5])\n",
+       "Coordinates:\n",
+       "  * hru      (hru) int64 0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_hru['theta_mp']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set2\n",
+      "set1\n",
+      "set3\n"
+     ]
+    }
+   ],
+   "source": [
+    "############################################### \n",
+    "############### soil parameter\n",
+    "###############################################\n",
+    "par = ['theta_res', 'theta_sat', 'vGn_alpha', 'vGn_n', 'k_soil']\n",
+    "soil_par = pd.DataFrame( data = [[0.045, 0.43, 0.15, 3.0, 1000, 0.5],\n",
+    "                                 [0.08,  0.43, 0.04, 1.6, 50,   0.5],\n",
+    "                                 [0.1,   0.4,  0.01, 1.1, 10,   0.5]],\n",
+    "                         index = ('sand', 'loam', 'clay'),\n",
+    "                         columns = par + ['l'])\n",
+    "\n",
+    "layer = dict(set1=('loam', 'sand'), set2=('sand', 'loam'), set3=('clay','sand'))\n",
+    "nlayers = [50, 150]\n",
+    "ds_hru = xr.Dataset(dict(hruId=('hru',[1001]),rootingDepth=('hru',[0.02]),theta_mp=('hru', [0.5])))\n",
+    "for k in layer.keys():\n",
+    "    print(k)\n",
+    "    ds = xr.concat(\n",
+    "        [\n",
+    "            xr.Dataset({p:(['depth'], np.repeat(soil_par.loc[l][p], n )) for p in par}) \n",
+    "            for l, n in zip(layer[k], nlayers)\n",
+    "        ], \n",
+    "        dim='depth')\n",
+    "    #ds = ds.isel(depth=np.concatenate([np.arange(0, 100), np.arange(50, 100),np.arange(50, 100)]))\n",
+    "    ds.vGn_alpha.values = -ds.vGn_alpha * 100\n",
+    "    ds.k_soil.values = ds.k_soil * 0.01 / 86400\n",
+    "    ds['k_macropore'] = ds.k_soil\n",
+    "    #ds_hru['theta_mp'].values = ds.theta_sat.values[0]\n",
+    "    ds = xr.merge([xr.broadcast(ds, ds_hru)[0], ds_hru])\n",
+    "    ds.drop('depth')\n",
+    "    ds.to_netcdf(\n",
+    "        r'D:\\Cloud\\Dropbox\\postdoc\\summa\\summaData\\summaTestCases\\settings_org\\syntheticTestCases\\vanderborght2005\\summa_zParamTrial_vanderborght2005_' \n",
+    "        + k + '.nc')\n",
+    "\n",
+    "# print(date())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'time' (time: 10)>\n",
+       "array(['1990-01-01T00:00:00.000000000', '1990-04-11T00:00:00.000000000',\n",
+       "       '1990-07-20T00:00:00.000000000', '1990-10-28T00:00:00.000000000',\n",
+       "       '1991-02-05T00:00:00.000000000', '1991-05-16T00:00:00.000000000',\n",
+       "       '1991-08-24T00:00:00.000000000', '1991-12-02T00:00:00.000000000',\n",
+       "       '1992-03-11T00:00:00.000000000', '1992-06-19T00:00:00.000000000'], dtype='datetime64[ns]')\n",
+       "Coordinates:\n",
+       "  * time     (time) datetime64[ns] 1990-01-01 1990-04-11 1990-07-20 ..."
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "############################################### \n",
+    "############### local attribute\n",
+    "###############################################\n",
+    "ds.time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "theta_res       0.045\n",
+       "theta_sat       0.430\n",
+       "vGn_alpha       0.150\n",
+       "vGn_n           3.000\n",
+       "k_soil       1000.000\n",
+       "l               0.500\n",
+       "Name: sand, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soil_par.loc['sand']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.108449606138\n"
+     ]
+    }
+   ],
+   "source": [
+    "############################################### \n",
+    "############### initial condition\n",
+    "###############################################\n",
+    "\n",
+    "\n",
+    "def Se(theta, soil):\n",
+    "    return (theta - soil['theta_res']) / (soil['theta_sat'] - soil['theta_res'])\n",
+    "\n",
+    "def theta(Se, soil):\n",
+    "    return soil['theta_res'] + Se * (soil['theta_sat'] - soil['theta_res'])\n",
+    "\n",
+    "def SeVG(h, soil):\n",
+    "    m = 1 - 1 / soil['vGn_n']\n",
+    "    return (1 + (soil['vGn_alpha'] * abs(h)) ** soil['vGn_n']) ** (-m)\n",
+    "\n",
+    "Se(0.3, soil_par.loc['sand'])\n",
+    "\n",
+    "print(SeVG(-20, soil_par.loc['sand']))\n",
+    "\n",
+    "nspec = 2\n",
+    "nmidSoil = 200\n",
+    "nifcSoil = nmidSoil + 1\n",
+    "nmidToto = nmidSoil\n",
+    "nifcToto = nmidToto + 1\n",
+    "nscalarv = 1\n",
+    "nhru = 1\n",
+    "    \n",
+    "ini_nc = xr.Dataset({'nSnow':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'nSoil':(['scalarv', 'hru'], np.array([[200]])),\n",
+    "                     'dt_init':(['scalarv', 'hru'], np.array([[60]])),\n",
+    "                     'scalarCanopyIce':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'scalarCanopyLiq':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'scalarCanairTemp':(['scalarv', 'hru'], np.array([[283.16]])),\n",
+    "                     'scalarCanopyTemp':(['scalarv', 'hru'], np.array([[283.16]])),\n",
+    "                     'scalarSnowAlbedo':(['scalarv', 'hru'], np.array([[0.82]])),\n",
+    "                     'scalarSWE':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'scalarSnowDepth':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'scalarSfcMeltPond':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'scalarAquiferStorage':(['scalarv', 'hru'], np.array([[0]])),\n",
+    "                     'iLayerHeight':(['ifcToto', 'hru'], np.arange(0,2.01,0.01).reshape([nifcToto, nhru])),\n",
+    "                     'mLayerDepth':(['midToto', 'hru'], np.repeat(0.01, 200).reshape([nmidToto, nhru])),\n",
+    "                     'mLayerTemp':(['midToto', 'hru'], np.repeat(283.16, 200).reshape([nmidToto, nhru])),\n",
+    "                     'mLayerVolFracIce':(['midToto', 'hru'], np.repeat(0, 200).reshape([nmidToto, nhru])),\n",
+    "                     'mLayerVolFracLiq':(['midToto', 'hru'], np.repeat(0.3, 200).reshape([nmidToto, nhru])),\n",
+    "                     'mLayerMatricHead':(['midSoil', 'hru'], np.repeat(-20, 200).reshape([nmidToto, nhru]))\n",
+    "                    })\n",
+    "h = xr.Dataset(dict(hruId=('hru', [1001])))\n",
+    "ds = xr.merge([ini_nc, h])\n",
+    "ds.to_netcdf(r'D:\\Cloud\\Dropbox\\postdoc\\summa\\summaData\\summaTestCases\\settings_org\\syntheticTestCases\\vanderborght2005\\summa_zInitialCond_vanderborght2005.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'time' (time: 10)>\n",
+       "array(['1990-01-01T00:00:00.000000000', '1992-09-27T00:00:00.000000000',\n",
+       "       '1995-06-24T00:00:00.000000000', '1998-03-20T00:00:00.000000000',\n",
+       "       '2000-12-14T00:00:00.000000000', '2003-09-10T00:00:00.000000000',\n",
+       "       '2006-06-06T00:00:00.000000000', '2009-03-02T00:00:00.000000000',\n",
+       "       '2011-11-27T00:00:00.000000000', '2014-08-23T00:00:00.000000000'], dtype='datetime64[ns]')\n",
+       "Coordinates:\n",
+       "  * time     (time) datetime64[ns] 1990-01-01 1992-09-27 1995-06-24 ..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "############################################### \n",
+    "############### forcing\n",
+    "###############################################\n",
+    "nday = 1000\n",
+    "f = xr.Dataset(dict(pptrate =('time', np.repeat(0.5*10/3600/24,   10)),\n",
+    "                    LWRadAtm=('time', np.repeat(350,              10)),\n",
+    "                    SWRadAtm=('time', np.repeat(0,                10)),\n",
+    "                    airpres =('time', np.repeat(101325,           10)),\n",
+    "                    airtemp =('time', np.repeat(283.16,           10)),\n",
+    "                    spechum =('time', np.repeat(0.0028,           10)),\n",
+    "                    windspd =('time', np.repeat(0,                10)),\n",
+    "                    time    =('time', pd.date_range('1/1/1990', periods=10, freq=str(nday) + 'D'))\n",
+    "                   )\n",
+    "               )\n",
+    "h = xr.Dataset(dict(hruId=('hru', [1001]), data_step=(86400*nday)))\n",
+    "ds = xr.merge([xr.broadcast(f, h)[0], h])\n",
+    "ds.to_netcdf(r'D:\\Cloud\\Dropbox\\postdoc\\summa\\summaData\\summaTestCases\\testCases_data_org\\inputData\\syntheticData\\vanderborght2005\\vanderborght2005_forcing.nc')\n",
+    "ds.time"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
