--- a/plot_SUMMA_output.ipynb
+++ b/plot_SUMMA_output.ipynb
@@ -1056,7 +1056,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
